# finovae_strategy_platform

./: .claude  .env.example  .gitignore  AGENTS.md  CLAUDE.md  CODEOWNERS  README.md  config  j01-progress-check  pyproject.toml  requirements.txt  scripts  templates  tests  vercel.json
apps/backend/: .env.example  AGENTS.md  CLAUDE.md  CODEOWNERS  README.md  main.py  pyproject.toml  requirements.txt  start.sh  test_concurrent_sandbox.py
apps/backend/backend/: __init__.py  api.py  auto_session.py  auto_session_routes.py  cost_tracker.py  directions_cache.py  directions_routes.py  pipeline.py  result_serialization.py  robust_objective.py  sandbox.py  session_routes.py  session_store.py
apps/backend/backtest/: __init__.py  engine.py  fills.py  metrics.py  rating.py  walk_forward.py
apps/backend/data/: binance_client.py  loader.py  validation.py
apps/backend/shared/: __init__.py  contracts.py  llm_usage.py  model_catalog.py  schemas.py
apps/backend/strategy/: __init__.py  codegen.py  compiler.py  history_planner.py  indicators.py  insights_generator.py  market_analyzer.py  script_generator.py
apps/backend/tests/: auto_session_helpers.py  test_auto_session.py  test_auto_session_leaderboard.py  test_auto_session_live.py  test_auto_session_routes.py  test_cost_tracker.py  test_determinism.py  test_directions_cache.py  test_health_routes.py  test_history_warmstart.py  test_loader.py  test_model_pricing.py  test_model_rates.py  test_sandbox.py  test_session_routes.py  test_session_store.py  test_sl_tp_path_model.py  test_usage_capture.py  test_walk_forward.py
(+608 files in other folders)
